# phosh

./: .gitlab-ci.yml  meson.build
data/: sm.puri.phosh.gschema.xml
debian/: control  not-installed  rules
plugins/: meson.build
plugins/airplane-mode-quick-setting/: airplane-mode-quick-setting.c  airplane-mode-quick-setting.desktop.in.in  airplane-mode-quick-setting.h  meson.build  phosh-plugin-airplane-mode-quick-setting.c  phosh-plugin-airplane-mode-quick-setting.gresources.xml  qs.ui
plugins/camera-privacy-quick-setting/: camera-privacy-quick-setting.c  camera-privacy-quick-setting.desktop.in.in  camera-privacy-quick-setting.h  meson.build  phosh-plugin-camera-privacy-quick-setting.c  phosh-plugin-camera-privacy-quick-setting.gresources.xml  qs.ui
plugins/dark-mode-quick-setting/: dark-mode-quick-setting.c  dark-mode-quick-setting.desktop.in.in  dark-mode-quick-setting.h  meson.build  phosh-plugin-dark-mode-quick-setting.c
plugins/location-privacy-quick-setting/: location-privacy-quick-setting.c  location-privacy-quick-setting.desktop.in.in  location-privacy-quick-setting.h  meson.build  phosh-plugin-location-privacy-quick-setting.c  phosh-plugin-location-privacy-quick-setting.gresources.xml  qs.ui
plugins/microphone-privacy-quick-setting/: meson.build  microphone-privacy-quick-setting.c  microphone-privacy-quick-setting.desktop.in.in  microphone-privacy-quick-setting.h  phosh-plugin-microphone-privacy-quick-setting.c  phosh-plugin-microphone-privacy-quick-setting.gresources.xml  qs.ui
plugins/powersaving-quick-setting/: meson.build  phosh-plugin-powersaving-quick-setting.c  phosh-plugin-powersaving-quick-setting.gresources.xml  powersaving-quick-setting.c  powersaving-quick-setting.desktop.in.in  powersaving-quick-setting.h  qs.ui
src/: activity.c  app-grid.c  fading-label.c  fading-label.h  home.c  home.h  layout-manager.c  libphosh.h  lockscreen-manager.c  lockscreen-manager.h  meson.build  monitor-manager.c  overview.c  overview.h  phosh-wayland.c  phoshdesktop.c  phoshdesktop.h  power-menu-manager.c  rotation-manager.c  rotation-manager.h  screen-saver-manager.c  screen-saver-manager.h  screenshot-manager.c  shell.c  style-manager.c  top-panel.c  top-panel.h  torch-manager.c  util.c  util.h  wifi-manager.c
src/monitor/: monitor.c  monitor.h
src/stylesheet/: adwaita-dark.css  common.css
src/ui/: app-grid-base-button.ui  app-grid-button.ui  app-grid.ui  audio-settings.ui  home.ui  overview.ui  phoshdesktop.ui  top-panel.ui
subprojects/: gmobile.wrap  gvc.wrap  libcall-ui.wrap
